--- a/src/Aml/Bundle/WebBundle/Resources/views/Form/aml_theme.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Form/aml_theme.html.twig
@@ -110,3 +110,9 @@
 {% endspaceless %}
 {% endblock time_widget %}
 
+{%- block button_widget -%}
+    {%- if label is empty -%}
+        {% set label = name|humanize %}
+    {%- endif -%}
+    <button type="{{ type|default('button') }}" {{ block('button_attributes') }}>{{ label|trans({}, translation_domain) }}</button>
+{%- endblock button_widget -%}
