#83: [WebBundle] add Breadcrumb

--- a/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index.html.twig
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index.html.twig
@@ -3,6 +3,9 @@
 {% block body %}
     <div id="col-left" class="two-cols-content">
 
+        {# Breadcrumb #}
+        {% include "AmlWebBundle::Partial/breadcrumb.html.twig" %}
+
         <h2>Contactez-nous</h2>
 
         <p>Nous sommes toujours à la recherche de nouveaux talents, alors n'hésitez pas à nous contacter
