--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/index.html.twig
@@ -9,6 +9,9 @@
 {% block body %}
     <div id="col-left" class="two-cols-content">
 
+        {# Breadcrumb #}
+        {% include "AmlWebBundle::Partial/breadcrumb.html.twig" %}
+
         <div class="contenu-page">
 
             {% if entities is not empty %}
