--- a/src/Aml/Bundle/DiscographyBundle/Resources/views/Discography/index.html.twig
+++ b/src/Aml/Bundle/DiscographyBundle/Resources/views/Discography/index.html.twig
@@ -7,6 +7,9 @@
 {% block body %}
 <div id="col-left" class="two-cols-content">
 
+    {# Breadcrumb #}
+    {% include "AmlWebBundle::Partial/breadcrumb.html.twig" %}
+
 	<div class="contenu-page">
 		
 		{% if entities is not empty %}
