--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
@@ -7,6 +7,9 @@
 {% block body %}
 <div id="col-left" class="two-cols-content">
 
+    {# Breadcrumb #}
+    {% include "AmlWebBundle::Partial/breadcrumb.html.twig" %}
+
 	<div class="contenu-page">
 
 		<h1>Agenda</h1>
