--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
@@ -26,8 +26,8 @@
     </iframe>
 {% elseif entity.logo.webpath is defined and entity.logo.webpath is not empty %}
     <div class="blog-visuel">
-        <a rel="prettyPhoto" href="{{ asset(entity.logo.webpath) | apply_filter('blog_view') }}">
-            <img width="375" height="250" class="imagecache imagecache-blog_list"
+        <a rel="prettyPhoto[blog]" href="{{ asset(entity.logo.webpath) | apply_filter('modal_img') }}">
+            <img width="425" height="300" class="imagecache imagecache-blog_list"
                  title="{{ entity.title }}"
                  src="{{ entity.logo.webpath | apply_filter('blog_list') }}"
                  alt="{{ entity.title }}"/>
