--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/show.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/show.html.twig
@@ -22,9 +22,11 @@
 
             {% if entity.logo %}
             <div class="blog-visuel">
-                <img src="{{ asset(entity.logo.webpath) | apply_filter('blog_view') }}"
-                     alt="" title="{{ entity.logo.title }}"
-                     class="imagecache imagecache-blog_view" width="500" />
+                <a class="thumbnail" rel="prettyPhoto" href="{{ asset(entity.logo.webpath) | apply_filter('modal_img') }}">
+                    <img src="{{ asset(entity.logo.webpath) | apply_filter('blog_view') }}"
+                         alt="" title="{{ entity.logo.title }}"
+                         class="imagecache imagecache-blog_view" width="588" />
+                </a>
             </div>
             {% endif %}
 
