N/A: [WebBundle] change with of blog images

--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
@@ -27,7 +27,7 @@
 {% elseif entity.logo.webpath is defined and entity.logo.webpath is not empty %}
     <div class="blog-visuel">
         <a rel="prettyPhoto[blog]" href="{{ asset(entity.logo.webpath) | apply_filter('modal_img') }}">
-            <img width="425" height="300" class="imagecache imagecache-blog_list"
+            <img width="425" class="imagecache imagecache-blog_list"
                  title="{{ entity.title }}"
                  src="{{ entity.logo.webpath | apply_filter('blog_list') }}"
                  alt="{{ entity.title }}"/>
