--- a/src/Aml/Bundle/WebBundle/Resources/views/layout.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/layout.html.twig
@@ -4,15 +4,12 @@
     	<meta charset="utf-8">
     	<title>{% block title %}{% endblock %} {{site_name}}</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<meta name="description" content="">
-    	<meta name="author" content="">
+    	<meta name="description" content="{{ block('title') }} {{site_name}}">
     
     	<!-- Le styles -->
     	<link rel="shortcut icon" href="{{ asset('bundles/amlweb/ico/aml_favicon.ico') }}" />
 
     	<link href="{{ asset('bundles/amlweb/css/bootstrap/bootstrap.min.css') }}" rel="stylesheet" />
-
-
 
         {% stylesheets '@AmlWebBundle/Resources/public/css/*' filter='?yui_css' %}
         <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
@@ -22,7 +19,6 @@
 
         <link href="{{ asset('bundles/amlweb/prettyPhoto/css/prettyPhoto.css') }}" rel="stylesheet" />
         <script src="{{ asset('bundles/amlweb/prettyPhoto/js/jquery.prettyPhoto.js') }}" type="text/javascript"></script>
-
 
     	{% block stylesheets %}{% endblock %}
     	
