--- a/src/Aml/Bundle/DiscographyBundle/Resources/views/Discography/show.html.twig
+++ b/src/Aml/Bundle/DiscographyBundle/Resources/views/Discography/show.html.twig
@@ -10,7 +10,7 @@
     {# Breadcrumb #}
     {% include "AmlWebBundle::Partial/breadcrumb.html.twig" %}
 
-	<div class="contenu-page">
+	<article class="contenu-page">
 	
 		<div class="discographie-bloc-titre">
 			<h2 class="discographie">{{ entity.title }}</h2>
@@ -58,7 +58,7 @@
         {% endif %}
 		
 		
-	</div>
+	</article>
 </div>
 
 <div id="col-right">
