--- a/src/Aml/Bundle/WebBundle/Resources/views/Page/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Page/index.html.twig
@@ -10,11 +10,11 @@
         {# Breadcrumb #}
         {% include "AmlWebBundle::Partial/breadcrumb.html.twig" %}
 
-        <div class="blog-article">
+        <article class="blog-article">
             <h2>{{ entity.title }}</h2>
 
             <div class="article-description">{{ entity.body|raw }}</div>
-        </div>
+        </article>
 
     </div>
     <div id="col-right">
