--- a/src/Aml/Bundle/WebBundle/Resources/views/Partial/menu.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Partial/menu.html.twig
@@ -2,6 +2,6 @@
 	File : menu.html.twig
 	Description : Tempalate pour le menu
 #}
-<div id="menu">
+<nav id="menu">
     {{ knp_menu_render('main') }}
-</div>
+</nav>
