--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
@@ -1,5 +1,5 @@
 {% if lastBlogArticle  %}
-<div id="blog-last-article-block" class="blog-article">
+<article id="blog-last-article-block" class="blog-article">
 	<h3>
         {% if lastBlogArticle.url.urlKey is defined and lastBlogArticle.url.urlKey is not empty %}
             <a href="{{ path('blog_show_rewrite', { 'url_key': lastBlogArticle.url.urlKey }) }}"
@@ -48,5 +48,5 @@
         {% endfor %}
     {% endif %}
 
-</div>
+</article>
 {% endif %}
