N/A: [WebBundle] fix tempate

--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/album.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/album.html.twig
@@ -1,4 +1,4 @@
-{% if lastAlbum  %}
+{% if lastAlbum %}
 <article id="discographie-last-album-block">
 	<div class="disc-pochette-list">
         {% if lastAlbum.image.webpath is defined %}
@@ -33,3 +33,4 @@
         {% endif %}
 	</div>	
 </article>
+{% endif %}
