--- a/src/Aml/Bundle/WebBundle/Resources/public/css/main.css
+++ b/src/Aml/Bundle/WebBundle/Resources/public/css/main.css
@@ -500,10 +500,30 @@ div#logo{
     padding-top: 5px;
     width: 100%;
 }
+
+.yt-lockup-thumbnail {
+    line-height: 0;
+    position: relative;
+}
+
+.video-lockup-content{
+    overflow: hidden;
+    position: relative;
+}
+
+#blocs-evenement-videos ul{
+    margin: 0;
+}
+#blocs-evenement-videos ul li {
+    display: inline-block;
+    margin-right: 10px;
+    vertical-align: top;
+    width: 185px;
+    word-wrap: break-word;
+}
 /* ------------------- Pagination --------------- */
 #global .Paginator a:visited:hover, #global .Paginator a:hover, #global .Paginator a:active {
     color: red;
-    /*text-decoration:none; */
 }
 
 #global .Paginator {
