--- a/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index/contact-form.html.twig
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index/contact-form.html.twig
@@ -1,5 +1,5 @@
 {# Bloc Contact form #}
-
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
 <div id="contact-block">
     <h3>Formulaire de contact</h3>
 
