--- a/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index/contact-form.html.twig
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index/contact-form.html.twig
@@ -6,7 +6,7 @@
     <form id="container-form-contact-us"
           action="{{ path('aml_contact_us_post') }}" method="post" {{ form_enctype(form) }}>
 
-        {{ form(form) }}
+        {{ form_widget(form) }}
 
     </form>
 
