--- a/src/Aml/Bundle/WebBundle/Resources/views/Menu/knp_menu.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Menu/knp_menu.html.twig
@@ -95,7 +95,7 @@
 {% endblock %}
 
 {% block linkElement %}{% import _self as knp_menu %}
-    <a href="{{ item.uri }}"{{ knp_menu.attributes(item.linkAttributes) }}>{{ block('label') }}</a> <span
+    <a href="{{ item.uri }}"{{ knp_menu.attributes(item.linkAttributes) }} title="{{ block('label') }}">{{ block('label') }}</a> <span
         class="divider">/</span>{% endblock %}
 
 {% block spanElement %}{% import _self as knp_menu %}
