[AdminBundle] delete admin route from robots.txt

--- a/src/Aml/Bundle/AdminBundle/Resources/views/standard_layout.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/standard_layout.html.twig
@@ -90,6 +90,7 @@ file that was distributed with this source code.
             {% endif%}
         {% endblock %}
         </title>
+        <meta name="robots" content="noindex, nofollow">
     </head>
     <body {% block body_attributes %}class="sonata-bc skin-black fixed"{% endblock %}>
         {% block sonata_header %}
