[Symfony] upgrade to Symfony 3.1

--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/article.html.twig
@@ -26,10 +26,10 @@
     </iframe>
 {% elseif entity.logo.webpath is defined and entity.logo.webpath is not empty %}
     <div class="blog-visuel">
-        <a rel="prettyPhoto[blog]" href="{{ asset(entity.logo.webpath) | apply_filter('modal_img') }}">
+        <a rel="prettyPhoto[blog]" href="{{ asset(entity.logo.webpath) | imagine_filter('modal_img') }}">
             <img width="425" class="imagecache imagecache-blog_list"
                  title="{{ entity.title }}"
-                 src="{{ entity.logo.webpath | apply_filter('blog_list') }}"
+                 src="{{ entity.logo.webpath | imagine_filter('blog_list') }}"
                  alt="{{ entity.title }}"/>
         </a>
     </div>
