--- a/src/Aml/Bundle/UsersBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Aml/Bundle/UsersBundle/Resources/views/Profile/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends "AmlUsersBundle::members-layout.html.twig" %}
+{% extends "Aml\Bundle\UsersBundle::members-layout.html.twig" %}
 
 {% block title -%}
     Espace membres - Edit Profile
