--- a/src/Aml/Bundle/WebBundle/Resources/views/Page/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Page/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "AmlWebBundle::layout.html.twig" %}
 
 {% block title -%}
-    Blog - {{ entity.title }}
+    Association - {{ entity.title }}
 {%- endblock title %}
 
 {% block body %}
