--- a/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index/contact-form.html.twig
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index/contact-form.html.twig
@@ -3,11 +3,9 @@
 <div id="contact-block">
     <h3>Formulaire de contact</h3>
 
-    <form id="container-form-contact-us"
-          action="{{ path('aml_contact_us_post') }}" method="post" {{ form_enctype(form) }}>
+    {{ form_start(form, {'method': 'POST','action': path('aml_contact_us_post'), 'id':'container-form-contact-us'}) }}
 
         {{ form_widget(form) }}
 
-    </form>
-
+    {{ form_end(form) }}
 </div>
