--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/show.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/show.html.twig
@@ -21,10 +21,10 @@
             {# Affiche #}
             {% if entity.picture and entity.picture.webpath %}
                 <div>
-                    <a rel="prettyPhoto" href="{{ asset(entity.picture.webpath) | apply_filter('modal_img') }}"
+                    <a rel="prettyPhoto" href="{{ asset(entity.picture.webpath) | imagine_filter('modal_img') }}"
                        class="thumbnail">
                         <img data-src="holder.js/160x120" alt="{{ entity.picture.title }}"
-                             src="{{ asset(entity.picture.webpath) | apply_filter('evenement_view') }}"
+                             src="{{ asset(entity.picture.webpath) | imagine_filter('evenement_view') }}"
                              title="{{ entity.picture.title }}"
                              class="imagecache imagecache-evenement_view" width="588"/>
                     </a>
