Travis | update travis and tests settings

--- a/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index.html.twig
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,9 @@
 {% extends "AmlWebBundle::layout.html.twig" %}
 
+{% block title -%}
+    Contactez-nous
+{%- endblock title %}
+
 {% block body %}
     <div id="col-left" class="two-cols-content">
 
