--- a/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index/contact-form.html.twig
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index/contact-form.html.twig
@@ -1,11 +1,8 @@
 {# Bloc Contact form #}
-{% form_theme form 'bootstrap_3_layout.html.twig' %}
+{% form_theme contact_form 'bootstrap_3_layout.html.twig' %}
+
 <div id="contact-block">
     <h3>Formulaire de contact</h3>
 
-    {{ form_start(form, {'method': 'POST','action': path('aml_contact_us_post'), 'id':'container-form-contact-us'}) }}
-        {{ form_widget(form.spam) }}
-        {{ form_widget(form) }}
-
-    {{ form_end(form) }}
+    {{ form(contact_form, { attr: { id: 'container-form-contact-us', novalidate: '' } }) }}
 </div>
