--- a/src/Aml/Bundle/WebBundle/Resources/views/Partial/footer.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Partial/footer.html.twig
@@ -8,7 +8,7 @@
     </ul>
 
     <ul id="footer-links">
-        <li><a href="{{ path('aml_contact_us_index') }}">Nous contacter</a></li>
+        <li><a href="{{ path('aml_contactus_default_index') }}">Nous contacter</a></li>
         <li>- <a{% if app.request.attributes.get('_route') == 'liens' %} class="active"{% endif %}
                     href="{{ path('liens') }}" title="Liens">Liens</a></li>
     </ul>
