--- a/src/Aml/Bundle/UsersBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Aml/Bundle/UsersBundle/Resources/views/Profile/edit_content.html.twig
@@ -1,10 +1,9 @@
-
 {% form_theme form 'bootstrap_3_layout.html.twig' %}
 {% trans_default_domain 'FOSUserBundle' %}
 
-<form action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="POST" class="fos_user_profile_edit">
+{{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit' } }) }}
     {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'profile.edit.submit'|trans }}" class="btn btn-primary"/>
-    </div>
-</form>
+<div>
+    <input type="submit" value="{{ 'profile.edit.submit'|trans }}" class="btn btn-primary"/>
+</div>
+{{ form_end(form) }}
