--- a/app/Resources/views/_includes/header.html.twig
+++ b/app/Resources/views/_includes/header.html.twig
@@ -18,7 +18,7 @@
     {% endif %}
 
     {# Menu #}
-    {% include "AmlWebBundle::Partial/menu.html.twig" %}
+    {% include "_includes/menu.html.twig" %}
 
 </header><!-- /Header -->
 
