--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
+<html lang="fr">
+<head>
+    <meta charset="utf-8">
+    <title>{% block title %}{% endblock %} {{ site_name }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="{{ block('title') }} {{ site_name }}">
+
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
+    </script>
+    <![endif]-->
+
+    <!-- Le styles -->
+    <link rel="shortcut icon" href="{{ asset('bundles/amlweb/ico/aml_favicon.ico') }}"/>
+
+    <link href="{{ asset('bundles/amlweb/css/bootstrap/bootstrap.min.css') }}" rel="stylesheet"/>
+
+    {% stylesheets '@AmlWebBundle/Resources/public/css/*' filter='?yui_css' %}
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
+    {% endstylesheets %}
+
+    <script src="{{ asset('bundles/amlweb/js/jquery/jquery.1.9.1.min.js') }}" type="text/javascript"></script>
+
+    <link href="{{ asset('bundles/amlweb/prettyPhoto/css/prettyPhoto.css') }}" rel="stylesheet"/>
+    <script src="{{ asset('bundles/amlweb/prettyPhoto/js/jquery.prettyPhoto.js') }}" type="text/javascript"></script>
+
+    {% block stylesheets %}{% endblock %}
+
+    {% block headerJs %}{% endblock %}
+
+    {{ render(controller('ToolsGoogleAnalyticsBundle:Default:index')) }}
+</head>
+<body>
+<div id="global">
+    {# Header #}
+    {% include "_includes/header.html.twig" %}
+
+    <section id="contenu">
+
+        <!-- CONTENT HERE -->
+        {% for flashMessage in app.session.flashbag.get('success') %}
+            <div class="alert alert-success flash-notice">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
+        {% for flashMessage in app.session.flashbag.get('notice') %}
+            <div class="alert alert-error flash-notice">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
+        {% for flashMessage in app.session.flashbag.get('info') %}
+            <div class="alert alert-info flash-notice">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
+
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+    </section>
+    <div class="clearfooter"></div>
+
+    {# Footer #}
+    {% include "_includes/footer.html.twig" %}
+</div>
+
+{% block javascripts %}{% endblock %}
+
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function () {
+        $("a[rel^='prettyPhoto']").prettyPhoto({
+            theme: 'facebook',
+            deeplinking: false,
+            social_tools: false,
+            show_title: false
+        });
+    });
+</script>
+</body>
 </html>
