--- a/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index.html.twig
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "AmlWebBundle::layout.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block title -%}
     Contactez-nous
@@ -8,7 +8,7 @@
     <div id="col-left" class="two-cols-content">
 
         {# Breadcrumb #}
-        {% include "AmlWebBundle::Partial/breadcrumb.html.twig" %}
+        {% include "_includes/breadcrumb.html.twig" %}
 
         <h2>Contactez-nous</h2>
 
