--- a/src/Aml/Bundle/WebBundle/Resources/views/Exception/error.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Exception/error.html.twig
@@ -1,4 +1,4 @@
-{% extends "AmlWebBundle::layout.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block title -%}
     {% trans %}An Error Occurred{% endtrans %}: {{ status_text }}
