--- a/src/Aml/Bundle/WebBundle/Resources/views/Exception/error404.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Exception/error404.html.twig
@@ -1,4 +1,4 @@
-{% extends "AmlWebBundle::layout.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block title -%}
     {% trans %}Page not found{% endtrans %}: {{ status_code }}
