--- a/src/Aml/Bundle/WebBundle/Resources/views/Page/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Page/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "AmlWebBundle::layout.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block title -%}
     Association - {{ entity.title }}
@@ -8,7 +8,7 @@
 
     <div id="col-left" class="two-cols-content">
         {# Breadcrumb #}
-        {% include "AmlWebBundle::Partial/breadcrumb.html.twig" %}
+        {% include "_includes/breadcrumb.html.twig" %}
 
         <article class="blog-article">
             <h2>{{ entity.title }}</h2>
