--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,7 +29,7 @@
 
     {% block headerJs %}{% endblock %}
 
-    {{ render(controller('ToolsGoogleAnalyticsBundle:Default:index')) }}
+    {{ render(controller('AmlWebBundle:Default:googleAnalytics')) }}
 </head>
 <body>
 <div id="global">
